--- a/WpfProject/MainWindow.xaml
+++ b/WpfProject/MainWindow.xaml
@@ -25,6 +25,7 @@
             <RowDefinition Height="20"/>
             <RowDefinition Height="20"/>
             <RowDefinition Height="20"/>
+            <RowDefinition Height="20"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
@@ -34,6 +35,8 @@
         <Button Content="Blur" Grid.Column="1"  Grid.Row="3" Height="20" Click="Blurr_button" />
         <Button Content="Clear Filters" Grid.Column="1"  Grid.Row="4" Height="20" Click="ClearFilters_button" />
         <Button Content="Pixelize" Grid.Column="1"  Grid.Row="5" Height="20" Click="Pixelize_button" />
+        <Button Content="Median" Grid.Column="1"  Grid.Row="6" Height="20" Click="Median_button" />
+
     </Grid>
 
 
