--- a/WpfProject/MainWindow.xaml
+++ b/WpfProject/MainWindow.xaml
@@ -6,20 +6,15 @@
         xmlns:local="clr-namespace:WpfProject"
         mc:Ignorable="d"
         Title="MainWindow" Height="1000" Width="1000">
-
-
-
+    
     <Grid>
-
-
-
-
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="500"/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="500"/>
+            <RowDefinition Height="20"/>
             <RowDefinition Height="20"/>
             <RowDefinition Height="20"/>
             <RowDefinition Height="20"/>
@@ -37,7 +32,8 @@
         <Button Content="Clear Filters" Grid.Column="1"  Grid.Row="4" Height="20" Click="ClearFilters_button" />
         <Button Content="Pixelize" Grid.Column="1"  Grid.Row="5" Height="20" Click="Pixelize_button" />
         <Button Content="Median" Grid.Column="1"  Grid.Row="6" Height="20" Click="Median_button" />
-        <Button Content="Edge Detection" Grid.Column="1"  Grid.Row="7" Height="20" Click="Sobel_button" />
+        <Button Content="Edge Detection Sobel" Grid.Column="1"  Grid.Row="7" Height="20" Click="Sobel_button" />
+        <Button Content="Edge Detection Perwitt" Grid.Column="1"  Grid.Row="8" Height="20" Click="Perwitt_button" />
 
     </Grid>
 
